mkdocs-material-0.1.1 (2016-02-11)

  * Fixed #1: GitHub stars don't work if the repo_url ends with a '/'
  * Updated npm and bower dependencies to most recent versions
  * Changed footer/copyright link to Material theme to GitHub pages
  * Made MkDocs building/serving in build process optional
  * Set up continuous integration with travis-ci.org

mkdocs-material-0.1.0 (2016-02-09)

  * Initial release